# esp-tui

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  TODO.md  esp-tui.example.toml
.claude/: settings.json
.claude/agents/: reviewer.md
.claude/commands/: review.md
.devcontainer/: devcontainer.json
.github/actions/esp-toolchain/: action.yml
.github/workflows/: ci.yml
esp-agent/: Cargo.toml
esp-agent-msg/: Cargo.toml
esp-agent-msg/src/: format.rs  lib.rs  parse.rs
esp-agent/src/: ffi.rs  fmt.rs  lib.rs  task.rs
esp-tui/: Cargo.toml
esp-tui/presets/: emacs.toml  vim.toml
esp-tui/src/: app.rs  config.rs  demo.rs  elf.rs  event.rs  filter.rs  flash.rs  input.rs  lib.rs  log.rs  main.rs  port.rs  runner.rs  serial.rs  source.rs  ui.rs
esp32-tui/: Cargo.toml
examples/c/: CMakeLists.txt
examples/c/main/: CMakeLists.txt  main.c
examples/rust/: .gitignore  Cargo.toml  build.rs  sdkconfig.defaults
examples/rust/.cargo/: config.toml
examples/rust/src/: main.rs
xtask/: Cargo.toml
xtask/src/: agent.rs  examples.rs  main.rs
