[workspace]
members = ["esp-tui", "esp-agent", "esp-agent-msg", "xtask"]
default-members = ["esp-tui"]
resolver = "2"

[workspace.lints.rust]
warnings = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
multiple_crate_versions = "allow"
