[lints]
workspace = true

[package]
name = "esp-tui"
version = "0.1.0"
edition = "2021"
description = "ESP32 developer workstation for the terminal"
license = "MIT"
repository = "https://github.com/yrakcaz/esp-tui"
readme = "../README.md"
keywords = ["esp32", "tui", "serial", "embedded", "monitor"]
categories = ["command-line-utilities", "embedded", "development-tools"]
